[metadata]
name = localmapper
version = 0.1.4
packages = find_packages()
description = LocalMapper for precise reaction atom-mapping
author = Shuan Chen
license = The GNU General Public License v3.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    numpy>=1.16.4
    matplotlib>=3.3.4
    torch>=1.0.0
    dgl>=0.5.2
    dgllife>=0.2.6

[options.package_data]
localmapper =
    data/*   
    LocalTemplate/*
    
    
[options.extras_require]
rdkit =
    # install RDKit. This is not as a setup dependency in order not to install it
    # in downstream packages and avoid potential conflicts with the conda
    # installation of RDKit
    rdkit-pypi>=2021.3.2 ; python_version<"3.7"
    rdkit>=2022.3.4 ; python_version>="3.7"